# C-_practice

./: .gitignore  CMakeLists.txt  README.md  build.sh
design_patterns/: CMakeLists.txt  package.xml
design_patterns/include/design_patterns/: audio_player.h
design_patterns/src/: audio_player.cpp  crtp.cpp  mediator.cpp  state.cpp  strategy.cpp
practice/: CMakeLists.txt  package.xml
practice/include/practice/: join_thread.h  thread_pool.h
practice/src/: align_node.cpp  crtp_node.cpp  future_node.cpp  if_switch_node.cpp  jthread_node.cpp  learning_thread.cpp  main.cpp  mixin_node.cpp  observer.cpp  odd_sequence_node.cpp  opencv_node.cpp  operator_node.cpp  sequence_node.cpp  shared_future_node.cpp  sigsegv.cpp  string_view_node.cpp  thread_pool.cpp  visitor_pattern_node.cpp
template_practice/: CMakeLists.txt  package.xml
template_practice/include/template_practice/: is_same_v.h  template_SFINAE.h  template_SFINAE_example.h  template_class_1.h  template_class_2.h  template_class_3.h  template_class_4.h  template_class_5.h  template_class_6.h  template_class_7.h  template_class_8.h  template_concept.h  template_concept_1.h  template_concept_2.h  template_dependent_names_1.h  template_dependent_names_2.h  template_dependent_names_3.h  template_enable_if.h  template_function_1.h  template_function_2.h  template_function_3.h  template_function_4.h  template_if.h  template_requires_1.h  template_requires_2.h  template_static_member_1.h  template_tuple.h  template_variable_1.h  template_variable_2.h  template_void_t.h
template_practice/src/: main.cpp  template_class_8.cpp
